# ECHO

./: .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  README.md  codex-prompt-cast-out.md  codex-prompt-eq-overhaul.md  codex-prompt-history-overhaul.md  codex-prompt-phone-remote.md  codex-prompt-queue-sidebar.md  package-lock.json  package.json  tests.js
.cursor/: mcp.json
.cursor/rules/: app-jsx-guard.mdc
docs/: APP_JSX_CHANGE_MAP.md  RELEASE_CHECKLIST.md  SMOKE_AUDIO.md  VST_MILESTONE.md  git-tutorial.md  plugin-development.md
examples/custom-lyrics-provider/: main.js  plugin.json
examples/hello-world-plugin/: plugin.json  renderer.js  styles.css
plugin development/osu-beatmap-search/: README.md  plugin.json  renderer.js  styles.css
scripts/: build-audio-host.mjs  build-win.mjs  generate-zh-tw-locale.mjs  guard-app-jsx-edits.mjs  guard-encoding.mjs  test-netease-meta.mjs  theme-audit-report.md  theme-audit.mjs  verify-release.mjs
server/listen-together/: DEPLOY_FROM_ZERO_ZH.md  README.md  auth.js  ecosystem.config.cjs  index.js  mediaStore.js  package-lock.json  package.json  roomStore.js
src/main/: CrashReporter.js  MediaDownloader.js  dialogLocale.js  index.js  lastfm.js  lyricsProviders.js  neteaseAuth.js  neteaseLyrics.js  neteasePlaylist.js  playlistLinkImport.js  playlistShareImport.js  qqMusicAuth.js  qqMusicProvider.js  romajiKuroshiro.js
src/main/audio/engine/: CMakeLists.txt  echo_out.cpp  wasapi_exclusive.cpp
src/preload/: index.js
website/: README.md  index.html  package-lock.json  package.json  script.js  styles.css
(+106 files in other folders)
